# micture

./: .gitignore  README.md  TODO.md  display_5x5_3procs.msch  pyproject.toml
.github/workflows/: release.yml
src/micture/: __init__.py
src/micture/core/: main.py  mlog.py  preprocessor.py  quadtree.py  schema.py
src/micture/scripts/: cli.py
src/micture/utils/: const.py  logging.py  params.py
src/yamig/: __init__.py
src/yamig/core/: main.py  mlog.py  preprocessor.py  quadtree.py  schema.py
src/yamig/scripts/: cli.py
src/yamig/utils/: const.py  exceptions.py  logging.py  params.py
