[project]
name = "micture"
version = "2.0.0"
description = "picture to mindustry schematic converter"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "numpy>=1.13.0",
    "pillow>=9.1.0",
    "pymsch>=0.0.17",
]

[project.scripts]
micture = "micture.scripts.cli:run_cli"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
lint.select = [
    "Q", "B", "E", "W", "I", "F",
    "G", "T", "UP", "EM", "SIM",
    "PTH", "ANN", "RET", "TRY"
]
lint.ignore = ["W293"]
